# egboard

./: .clang-format  .gitignore  Cargo.toml  LICENSE  README.md  build.rs  egboard.ino  rust-toolchain.toml  script.gdb  undotree_2
.cargo/: config.toml
central_node/src/: data_decoder.rs  main.rs  panic_handler.rs
files/hardware/: bottom.dxf  our_screen.dxf  rust_screen.dxf  top.dxf
files/mechanical/: bottom_plate.dxf  bottom_plate.scad  key_plate.dxf  key_plate.scad  keycaps.scad  keycaps.stl  mm_1.dxf  mm_10.dxf  mm_2.dxf  mm_2_transparent.dxf  mm_5_lower.dxf  mm_5_upper.dxf  support_plate_bottom.scad  support_plate_bottom.stl  support_plate_top.scad  support_plate_top.stl
files/openscad/: .clang-format  base_plate.scad  case_plate.scad  generator.scad  key_caps.scad  key_holes.scad  key_plate.scad  keycap-stud.stl  magholder.scad  main.scad  screw_stud.scad
files/openscad/halves/: config.scad
files/openscad/halves/left/: bottom.scad  config.scad  hooker.scad  middle_lower.scad  middle_upper.scad  slider.scad  slider_cover.scad  top_plate.scad
files/openscad/halves/right/: bottom.scad  config.scad  logo_screen.scad  middle_lower.scad  middle_upper.scad  slider_cover.scad  top_plate.scad
files/openscad/layout/: config.scad  layout.scad
files/openscad/rust_logo/: logo.scad  rust_logo.stl
src/: data_encoder.rs  default_keymap.rs  get_key_state_macro.rs  keymap.rs  keys_macro.rs  main.rs
