[package]
name = "egboard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rp-pico = "0.5.0"
rp2040-hal = {path = "../rp-hal/rp2040-hal"}
cortex-m-rt = "0.7.1"
embedded-hal = "0.2.7"
cortex-m = "0.7.6"
defmt = "0.3.2"
defmt-rtt = "0.4.0"

[[bin]]
name = "egboard"
test = false
harness = false
