[package]
name = "egboard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rp-pico = "0.7.0"
cortex-m-rt = "0.7.1"
embedded-hal = "0.2.7"
cortex-m = "0.7.6"
defmt = "0.3.2"
defmt-rtt = "0.4.0"
usbd-human-interface-device = { git = "https://github.com/dlkj/usbd-human-interface-device" }
usb-device = "0.2.9"
fugit = "0.3.6"
heapless = "0.7.16"

[[bin]]
name = "egboard"
test = false
harness = false

[profile.release]
opt-level = "z"
lto = true
